fixed reactive form error

--- a/events/src/app/tab2/tab2.page.html
+++ b/events/src/app/tab2/tab2.page.html
@@ -14,7 +14,7 @@
         <ion-input formControlName="name" id="input"></ion-input>
       </ion-item>
       <ion-item id="rounded">
-        <ion-input id="photo" name="file" type="file" accept="image/*" (change)="handleFileInput($event.target.files)">
+        <ion-input id="photo" type="file" accept="image/*" (change)="handleFileInput($event.target.files)">
         </ion-input>
       </ion-item>
       <ion-item>
