--- a/events/src/app/tab2/tab2.page.html
+++ b/events/src/app/tab2/tab2.page.html
@@ -12,7 +12,7 @@
     <form [formGroup]="eventForm" (submit)="addEvent()">
       <ion-item id="rounded">
         <ion-label position="stacked">Name</ion-label>
-        <ion-input formControlName="name" id="input"></ion-input>
+        <ion-input formControlName="name" id="input" required></ion-input>
       </ion-item>
       <ion-item id="rounded">
         <ion-input id="photo" type="file" accept="image/*" (change)="handleFileInput($event.target.files)">
@@ -20,7 +20,7 @@
       </ion-item>
       <ion-item>
         <ion-label position="stacked">Description</ion-label>
-        <ion-textarea formControlName="description" rows="6" cols="20"></ion-textarea>
+        <ion-textarea formControlName="description" rows="6" cols="20" required></ion-textarea>
       </ion-item>
       <div class="ion-padding">
         <ion-button expand="block" type="submit" class="ion-no-margin">Add An Event</ion-button>
